--- a/mini2/mini2.vcxproj
+++ b/mini2/mini2.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <ClCompile Include="Allegro5Exception.cpp" />
     <ClCompile Include="AudioHelper.cpp" />
+    <ClCompile Include="BlueNormalEnemy.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="DirtyEffect.cpp" />
@@ -187,6 +188,7 @@
   <ItemGroup>
     <ClInclude Include="Allegro5Exception.hpp" />
     <ClInclude Include="AudioHelper.hpp" />
+    <ClInclude Include="BlueNormalEnemy.hpp" />
     <ClInclude Include="Bullet.hpp" />
     <ClInclude Include="Collider.hpp" />
     <ClInclude Include="DirtyEffect.hpp" />
