--- a/mini2/mini2.vcxproj.filters
+++ b/mini2/mini2.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="SettingScene.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="BlueNormalEnemy.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plane.hpp">
@@ -213,6 +216,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="SettingScene.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="BlueNormalEnemy.hpp">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
