--- a/mini2/mini2.vcxproj.filters
+++ b/mini2/mini2.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="BlueNormalEnemy.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="MachineGunTurret.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="FireBullet.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plane.hpp">
@@ -219,6 +225,12 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="BlueNormalEnemy.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="MachineGunTurret.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="FireBullet.hpp">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
