--- a/mini2/mini2.vcxproj.filters
+++ b/mini2/mini2.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="FireBullet.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="ShootingEffect.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plane.hpp">
@@ -231,6 +234,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="FireBullet.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="ShootingEffect.hpp">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
